# LENS

./: CMakeLists.txt  README.md
backend/: .env  .env.example  app.js  package-lock.json  package.json  run.sh
backend/api/: auth.js  engine.js  loggedIn.js
backend/controllers/: authController.js  engineController.js  incidentController.js
backend/db/: connection.js  migrate.sql
backend/middleware/: auth.js  engineAuth.js
dashboard/includes/: MainWindow.h
dashboard/ui/: MainWindow.ui
database/: lens.db
docs/: ARCHITECTURE.md  ENGINE_STRUCTURE.md  LENS.drawio  README.md
engine/: CMakeLists.txt  run.sh  test_video.sh
engine/database/: lens.db
engine/includes/camera/: CameraCapture.h  CameraConfig.h  CameraManager.h  CameraStore.h  CameraWorker.h
engine/includes/engine/: Engine.h
engine/includes/http/: HttpServer.h
engine/includes/incident/: IncidentHandler.h
engine/includes/inference/: Inferencer.h
engine/models/: model.onnx  model.onnx.data
engine/src/: main.cpp
engine/src/camera/: CameraCapture.cpp  CameraManager.cpp  CameraStore.cpp  CameraWorker.cpp
engine/src/engine/: Engine.cpp
engine/src/http/: HttpServer.cpp
engine/src/incident/: IncidentHandler.cpp
engine/src/inference/: Inferencer.cpp
includes/: MainWindow.h
includes/camera/: CameraCapture.h  CameraConfig.h  CameraManager.h  CameraStore.h  CameraWorker.h
interface/: AddCameraDialog.cpp  AddCameraDialog.h  ApiClient.cpp  ApiClient.h  CMakeLists.txt  CameraCard.cpp  CameraCard.h  MainWindow.cpp  MainWindow.h  SetupDialog.cpp  SetupDialog.h  main.cpp  resources.qrc  run.sh
mobile/: App.js  app.json  eas.json  package-lock.json  package.json  run.sh
mobile/components/: NotificationBell.js
mobile/context/: AuthContext.js  NotificationContext.js
mobile/screens/: HomeScreen.js  IncidentDetailScreen.js  IncidentsScreen.js  LoginScreen.js
mobile/utils/: api.js
src/: MainWindow.cpp
src/camera/: CameraCapture.cpp  CameraManager.cpp  CameraStore.cpp  CameraWorker.cpp
ui/: MainWindow.ui
